# periodicos

./: README.md  main.py  manage.py  pyproject.toml
Periodicos/: asgi.py  settings.py  urls.py  wsgi.py
periodico/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
periodico/management/commands/: atualizar_area_professor.py  importar_professor.py  importar_publicacao.py
periodico/migrations/: 0001_initial.py  0002_professor_aceitos_professor_capitulos_and_more.py  0003_alter_professor_aceitos_alter_professor_capitulos_and_more.py  0004_alter_publicacao_titulo.py  0005_publicacao_visualizacoes.py
periodico/templates/: base copy.html  base.html  cadastrar_publicacao.html  cadastro_professor.html  cadastro_user.html  detalhe.html  home.html  lista_professores.html  perfil_professor.html
periodico/templates/registration/: login.html
static/images/: IFMA_Logo.png:Zone.Identifier
staticfiles/images/: PPGB_Logo.jpg:Zone.Identifier  UNIRIO_Logo.png:Zone.Identifier
