[project]
name = "periodicos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=6.0.2",
    "django-crispy-forms>=2.5",
    "mysql-connector-python>=9.5.0",
    "mysqlclient>=2.2.7",
]
